// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pdk-searchbar should display an error when submitted with an invalid model 1`] = `
<pdk-searchbar-test
  borderless="false"
  required={[Function Boolean]}
>
  <form
    class="ng-untouched ng-pristine ng-invalid ng-submitted"
    novalidate=""
  >
    <pdk-searchbar
      ariadescribedby="ARIA_DESCRIBED_BY"
      arialabel="ARIA_LABEL"
      arialabelledby="ARIA_LABELLED_BY"
      class="ng-untouched ng-pristine ng-invalid"
      id="SEARCHBAR_ID"
      name="test"
      ngmodel=""
      placeholder="My custom placeholder"
      required=""
    >
      <div
        class="pdk-searchbar pdk-searchbar--secondary"
      >
        <input
          aria-describedby="ARIA_DESCRIBED_BY"
          aria-label="ARIA_LABEL"
          aria-labelledby="ARIA_LABELLED_BY"
          class="pdk-searchbar__input govuk-input govuk-input--error"
          id="searchbar_SEARCHBAR_ID"
          pdk-input=""
          placeholder="My custom placeholder"
          required=""
          type="text"
        />
        <button
          class="pdk-searchbar__button"
          type="submit"
        >
          <pdk-search-icon
            color="#fff"
            style="display: flex; align-items: center; justify-content: center;"
          >
            <i
              style="height: 20px; width: 20px; fill: #fff;"
            >
              <svg
                height="100%"
                viewBox="0 0 512 512"
                width="100%"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </i>
          </pdk-search-icon>
          <span
            class="pdk-searchbar__label govuk-visually-hidden"
            pdk-visually-hidden=""
          >
             ARIA_LABEL 
          </span>
        </button>
      </div>
    </pdk-searchbar>
  </form>
</pdk-searchbar-test>
`;

exports[`pdk-searchbar should render 1`] = `
<pdk-searchbar-test
  borderless="false"
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    novalidate=""
  >
    <pdk-searchbar
      ariadescribedby="ARIA_DESCRIBED_BY"
      arialabel="ARIA_LABEL"
      arialabelledby="ARIA_LABELLED_BY"
      class="ng-untouched ng-pristine ng-valid"
      id="SEARCHBAR_ID"
      name="test"
      ngmodel=""
      placeholder="My custom placeholder"
    >
      <div
        class="pdk-searchbar pdk-searchbar--secondary"
      >
        <input
          aria-describedby="ARIA_DESCRIBED_BY"
          aria-label="ARIA_LABEL"
          aria-labelledby="ARIA_LABELLED_BY"
          class="pdk-searchbar__input govuk-input"
          id="searchbar_SEARCHBAR_ID"
          pdk-input=""
          placeholder="My custom placeholder"
          required=""
          type="text"
        />
        <button
          class="pdk-searchbar__button"
          type="submit"
        >
          <pdk-search-icon
            color="#fff"
            style="display: flex; align-items: center; justify-content: center;"
          >
            <i
              style="height: 20px; width: 20px; fill: #fff;"
            >
              <svg
                height="100%"
                viewBox="0 0 512 512"
                width="100%"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </i>
          </pdk-search-icon>
          <span
            class="pdk-searchbar__label govuk-visually-hidden"
            pdk-visually-hidden=""
          >
             ARIA_LABEL 
          </span>
        </button>
      </div>
    </pdk-searchbar>
  </form>
</pdk-searchbar-test>
`;

exports[`pdk-searchbar should render with a borderless style 1`] = `
<pdk-searchbar-test
  borderless={[Function Boolean]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    novalidate=""
  >
    <pdk-searchbar
      ariadescribedby="ARIA_DESCRIBED_BY"
      arialabel="ARIA_LABEL"
      arialabelledby="ARIA_LABELLED_BY"
      class="ng-untouched ng-pristine ng-valid"
      id="SEARCHBAR_ID"
      name="test"
      ngmodel=""
      placeholder="My custom placeholder"
    >
      <div
        class="pdk-searchbar pdk-searchbar--secondary"
      >
        <input
          aria-describedby="ARIA_DESCRIBED_BY"
          aria-label="ARIA_LABEL"
          aria-labelledby="ARIA_LABELLED_BY"
          class="pdk-searchbar__input govuk-input pdk-searchbar__input--borderless"
          id="searchbar_SEARCHBAR_ID"
          pdk-input=""
          placeholder="My custom placeholder"
          required=""
          type="text"
        />
        <button
          class="pdk-searchbar__button pdk-searchbar__button--borderless"
          type="submit"
        >
          <pdk-search-icon
            color="#fff"
            style="display: flex; align-items: center; justify-content: center;"
          >
            <i
              style="height: 20px; width: 20px; fill: #fff;"
            >
              <svg
                height="100%"
                viewBox="0 0 512 512"
                width="100%"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </i>
          </pdk-search-icon>
          <span
            class="pdk-searchbar__label govuk-visually-hidden"
            pdk-visually-hidden=""
          >
             ARIA_LABEL 
          </span>
        </button>
      </div>
    </pdk-searchbar>
  </form>
</pdk-searchbar-test>
`;

exports[`pdk-searchbar should render with an inverted style 1`] = `
<pdk-searchbar-test
  borderless="false"
  invert={[Function Boolean]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    novalidate=""
  >
    <pdk-searchbar
      ariadescribedby="ARIA_DESCRIBED_BY"
      arialabel="ARIA_LABEL"
      arialabelledby="ARIA_LABELLED_BY"
      class="ng-untouched ng-pristine ng-valid"
      id="SEARCHBAR_ID"
      name="test"
      ngmodel=""
      placeholder="My custom placeholder"
    >
      <div
        class="pdk-searchbar pdk-searchbar--secondary"
      >
        <input
          aria-describedby="ARIA_DESCRIBED_BY"
          aria-label="ARIA_LABEL"
          aria-labelledby="ARIA_LABELLED_BY"
          class="pdk-searchbar__input govuk-input"
          id="searchbar_SEARCHBAR_ID"
          pdk-input=""
          placeholder="My custom placeholder"
          required=""
          type="text"
        />
        <button
          class="pdk-searchbar__button"
          type="submit"
        >
          <pdk-search-icon
            color="#fff"
            style="display: flex; align-items: center; justify-content: center;"
          >
            <i
              style="height: 20px; width: 20px; fill: #fff;"
            >
              <svg
                height="100%"
                viewBox="0 0 512 512"
                width="100%"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </i>
          </pdk-search-icon>
          <span
            class="pdk-searchbar__label govuk-visually-hidden"
            pdk-visually-hidden=""
          >
             ARIA_LABEL 
          </span>
        </button>
      </div>
    </pdk-searchbar>
  </form>
</pdk-searchbar-test>
`;
